--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Joshua Urasa</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="vO81yWwXdq24KcyLp376DPA0yOG2pHJs4LOt4iyW0UQ" />
+    <title>Document</title>
+</head>
+<body>
+    <h1>Joshua</h1>
+</body>
+</html>
